feat(api): support per-application API keys
